<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lv.digitalteam.android.socionicscalculator.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_1"/>

    <LinearLayout
        android:id="@+id/ramis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:layout_margin="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg_calcb"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/layout_bg_calcw"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/gaidam_rezultatu"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"
            android:text="@string/vienkars_apraksts"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_intraverts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_iracionals"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_etisks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_intuits" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/intraEkstraRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/intravertsRadioButton"
                        android:layout_width="wrap_content"
                        android:onClick="addIntraverts"
                        android:buttonTint="@android:color/white"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/ekstravertsRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addEkstraverts"/>
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/racionIracionRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/iracionalRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addIracionals"
                        />

                    <RadioButton
                        android:id="@+id/racionalRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addRacionals"/>
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/logisksEtisksRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/etisksRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addEtisks"/>

                    <RadioButton
                        android:id="@+id/logisksRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addLogisks"/>
                </RadioGroup>
                <RadioGroup
                    android:id="@+id/IntuitsSensorsRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/intuitsRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addIntuits"/>

                    <RadioButton
                        android:id="@+id/sensorsRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@android:color/white"
                        android:onClick="addSensors"/>
                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_ekstraverts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_racionals"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:text="@string/dihotomas_logisks"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:padding="7dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/dihotomas_sensors" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/advanceCalcPoga"
        android:layout_width="wrap_content"
        android:layout_below="@id/ramis"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_bg_calcw"
        android:textColor="@android:color/white"
        android:padding="7dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/Advance_calc_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/layout_bg_calcw"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>


